[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/globals/globalmusic/MusicServer.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/music/midnight.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/globals/globalmusic/Midnight.gd" type="Script" id=3]

[node name="MusicServer" type="Node"]

script = ExtResource( 1 )

[node name="Midnight" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -24.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Music"
script = ExtResource( 3 )

[connection signal="play_song" from="." to="Midnight" method="_on_MusicServer_play_song"]

[connection signal="stop_all_songs" from="." to="Midnight" method="_on_MusicServer_stop_all_songs"]

[connection signal="stop_song" from="." to="Midnight" method="_on_MusicServer_stop_song"]


